--- a/meeting/src/main/webapp/WEB-INF/web.xml
+++ b/meeting/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://JAVA.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<!-- 서버가 가동되고 있는 한 접근이 가능한 스프링빈 컨테이너 및 설정파일 등록-->
 	<context-param>
@@ -71,7 +71,36 @@
 		<url-pattern>/profile/*</url-pattern>
 	</servlet-mapping>
 	
-
+		<servlet>
+		<servlet-name>boardServlet</servlet-name >
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/board-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>boardServlet</servlet-name>
+		<url-pattern>/board/*</url-pattern>
+	</servlet-mapping>
+	
+	<!-- Processes application requests -->
+	<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+      	<async-supported>true</async-supported> <!-- 웹소켓을 위한 설정(비동기지원) -->
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 	
 
 </web-app>
