--- a/meeting/src/main/webapp/WEB-INF/web.xml
+++ b/meeting/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app version="3.0" xmlns="http:/java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://JAVA.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
@@ -53,6 +53,8 @@
 		<servlet-name>adminServlet</servlet-name>
 		<url-pattern>/admin/*</url-pattern>
 	</servlet-mapping>
+	
+
 
 	
 	<!-- Processes application requests -->
@@ -70,6 +72,8 @@
 		<servlet-name>profileServlet</servlet-name>
 		<url-pattern>/profile/*</url-pattern>
 	</servlet-mapping>
+	
+
 	
 		<servlet>
 		<servlet-name>boardServlet</servlet-name >
